# pyprland

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  TODO.md  default.nix  done.rst  flake.nix  hatch_build.py  justfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tickets.rst  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wiki_improvement.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: aur.yml  check.yml  ci.yml  nix-setup.yml  nix.yml  pylint.yml  pytest.yml  site.yml  tox.yml  tox_10_full.yml  uv-install.yml
.opencode/plan/: niri_monitor_support.md
client/: pypr-client  pypr-client.c  pypr-client.go  pypr-client.rs
client/pypr-rs/: Cargo.toml
client/pypr-rs/src/: main.rs
example/pypr_examples/: focus_counter.py
examples/: CONTRIBUTE_YOUR_CONFIGURATION  CONTRIBUTE_YOUR_CONFIGURATION.md  README.md  copy_conf.sh  pyproject.toml
examples/fab/hypr/: hyprland.conf  pyprland.toml
examples/pypr_examples/: focus_counter.py
pyprland/: __init__.py  aioops.py  ansi.py  builtin_commands.py  client.py  command.py  command_registry.py  common.py  completions.py  config.py  config_loader.py  constants.py  debug.py  doc.py  help.py  ipc.py  ipc_paths.py  logging_setup.py  manager.py  models.py  process.py  pypr_daemon.py  state.py  terminal.py  types.py  utils.py  validate_cli.py  validation.py  version.py
pyprland/adapters/: __init__.py  backend.py  colors.py  fallback.py  hyprland.py  lua_translate.py  menus.py  niri.py  notifier.py  proxy.py  units.py  wayland.py  xorg.py
pyprland/commands/: __init__.py  models.py  tree.py
pyprland/completions/: __init__.py  discovery.py  models.py
pyprland/completions/generators/: __init__.py  bash.py  fish.py  zsh.py
pyprland/gui/: __init__.py  __main__.py  api.py  server.py
pyprland/gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
pyprland/gui/static/: index.html
pyprland/plugins/: __init__.py  background.py  centerlayout.py  experimental.py  expose.py  fcitx5_switcher.py  fetch_client.py  fetch_client_menu.py  gamemode.py  gbar.py  interface.py  ironbar.py  layout_center.py  lost_windows.py  magnify.py  menubar.py  mixins.py  monitors.py  monitors_v0.py  protocols.py  pyprland.py  scratchpads.py  shift_monitors.py  shortcuts_menu.py  stash.py  system_notifier.py  toggle_dpms.py  toggle_special.py  wallpapers.py  wallpapers_imageutils.py  wallpapers_utils.py  workspaces_follow_focus.py
pyprland/plugins/monitors/: __init__.py  layout.py  resolution.py  schema.py
pyprland/plugins/pyprland/: __init__.py  hyprland_core.py  niri_core.py  schema.py
pyprland/plugins/scratchpads/: __init__.py  animations.py  common.py  events.py  helpers.py  lifecycle.py  lookup.py  objects.py  schema.py  transitions.py  windowruleset.py
pyprland/plugins/wallpapers/: __init__.py  cache.py  colorutils.py  hyprpaper.py  imageutils.py  models.py  palette.py  templates.py  theme.py
pyprland/quickstart/: __init__.py  __main__.py  generator.py  questions.py  wizard.py
pyprland/quickstart/helpers/: __init__.py  monitors.py
sample_extension/: README.md  pyproject.toml
sample_extension/pypr_examples/: focus_counter.py
scripts/: backquote_as_links.py  check_plugin_docs.py  generate_codebase_overview.py  generate_monitor_diagrams.py  generate_plugin_docs.py  get-pypr  make_release  plugin_metadata.json  plugin_metadata.toml  pypr.py  pypr.sh  render_static_docs.py  test_wiki_coverage.sh  title  update_get-pypr.sh  update_version  v_whitelist.py
scripts/completions/: README.md  _pypr  pypr  pypr.bash  pypr.zsh
site/: Architecture_core.md  Commands.md  Configuration.md  Development.md  Getting-started.md  Home.md  InstallVirtualEnvironment.md  Menu.md  Nix.md  Optimizations.md  Plugins.md  Troubleshooting.md  Variables.md  expose.md  fcitx5_switcher.md  fetch_client_menu.md  filters.md  gamemode.md  gbar.md  index.md  layout_center.md  lost_windows.md  magnify.md  make_version.sh  menubar.md  monitors.md  scratchpads.md  scratchpads_advanced.md  scratchpads_nonstandard.md  shift_monitors.md  shortcuts_menu.md  sidebar.json  stash.md  system_notifier.md  toggle_dpms.md  toggle_special.md  wallpapers.md  wallpapers_templates.md  workspaces_follow_focus.md
site/.vitepress/: config.mjs
site/.vitepress/theme/: custom.css  index.js
site/components/: BuiltinCommands.vue  CommandList.vue  ConfigBadges.vue  ConfigChoices.vue  ConfigDefault.vue  ConfigTable.vue  EngineDefaults.vue  PluginCommands.vue  PluginConfig.vue  PluginList.vue  configHelpers.js  jsonLoader.js  usePluginData.js
site/versions/2.3.5/: Getting-started.md  MultipleConfigurationFiles.md  Troubleshooting.md  expose.md  fetch_client_menu.md  gbar.md  index.md  magnify.md  (+10 more)
src/pyprland/: httpclient.py  logging_setup.py  models.py  pypr_daemon.py  state.py  version.py
systemd-unit/: pyprland.service
tests/: conftest.py  sample_config.toml  test_adapters_fallback.py  test_ansi.py  test_command.py  test_command_registry.py  test_common_types.py  test_common_utils.py  test_completions.py  test_config.py  test_event_signatures.py  test_external_plugins.py  test_http.py  test_interface.py  test_ipc.py  test_load_all.py  test_lua_translate.py  test_monitor.py  test_monitors_commands.py  test_monitors_layout.py  test_monitors_resolution.py  test_native_client_build.py  test_plugin_expose.py  test_plugin_fetch_client_menu.py  test_plugin_layout_center.py  test_plugin_lost_windows.py  test_plugin_magnify.py  test_plugin_menubar.py  test_plugin_monitor.py  test_plugin_scratchpads.py  test_plugin_shift_monitors.py  test_plugin_shortcuts_menu.py  test_plugin_stash.py  test_plugin_system_notifier.py  test_plugin_toggle_dpms.py  test_plugin_toggle_special.py  test_plugin_wallpapers.py  test_plugin_workspaces_follow_focus.py  test_process.py  test_pyprland.py  (+10 more)
tests/vreg/: 01_client_id_change.py  run_tests.sh
type_stubs/PIL/: Image.pyi  ImageDraw.pyi  ImageOps.pyi  __init__.pyi
(+238 files in other folders)
