[project]
name = "pyprland"
version = "2.6.2"
description = "Hyperland plugin system - batteries included"
authors = [
    { name = "Fabien Devaux", email = "fdev31 <fdev31@gmail.com>" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hyprland-community/pyprland/"
packages = [
    { include = "pyprland" },
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles >= 23.2.1",
    "aiohttp >= 3.9.0",
    "pillow[rounded] >= 10.0.0",
]

[project.scripts]
pypr = "pyprland.command:main"

[dependency-groups]
dev = [
    "pytest >=7.4.3",
    "pytest-asyncio >=0.23.2",
    "pytest-mock >=3.12.0",
    "vulture >=2.11",
    "coverage >=7.4.1",
    "mypy >=1.8.0",
    "pdoc >=14.4.0",
]
lint = [
    "black >=24.1.1",
    "flake8 >=7.0.0",
    "pydantic >=2.6.1",
    "pylint >=3.0.3",
    "ruff >=0.4.2",
    "types-aiofiles >=25.1.0.20251011",
]

[tool.ruff]
line-length = 140
preview = false
src = [
    "pyprland",
]
exclude = [
    "*_v?.py",
    "tests",
    "scripts",
    "sample_extension",
    ".git",
]
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
    "D105",
    "D107",
    "E203",
    "ISC001",
    "RET503",
    "S101",
    "S311",
    "S404",
    "S602",
    "S603",
    "S605",
    "S607",
    "TID252",
]
select = [
    "A",
    "AIR",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
    "ANN",
    "ASYNC1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Backend adapters have unused args due to interface compliance
"pyprland/adapters/fallback.py" = ["ARG002"]
"pyprland/adapters/niri.py" = ["ARG002"]
"pyprland/adapters/hyprland.py" = ["ARG002"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
exclude = [
    "tests/*",
    "scripts/*",
    "sample_extension/*",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

