[project]
name = "pyprland"
version = "3.1.0"
description = "A companion for your desktop UX"
authors = [
    { name = "Fabien Devaux", email = "fdev31 <fdev31@gmail.com>" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "pillow",
]
homepage = "https://github.com/hyprland-community/pyprland/"
packages = [
    { include = "pyprland" },
]

[project.scripts]
pypr = "pyprland.command:main"
pypr-quickstart = "pyprland.quickstart:main"

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "mypy",
    "pdoc",
    "pre-commit>=4.5.1",
    "pydantic",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "types-aiofiles",
    "vulture",
]
quickstart = [
    "questionary>=2.1.1",
]

[tool.ruff]
line-length = 140
preview = false
src = [
    "pyprland",
]
exclude = [
    "*_v?.py",
    "tests",
    "scripts",
    "sample_extension",
    ".git",
]
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
    "D105",
    "D107",
    "E203",
    "ISC001",
    "RET503",
    "S101",
    "S311",
    "S404",
    "S602",
    "S603",
    "S605",
    "S607",
    "TID252",
]
select = [
    "A",
    "AIR",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
    "ANN",
    "ASYNC1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"pyprland/adapters/fallback.py" = [
    "ARG002",
]
"pyprland/adapters/niri.py" = [
    "ARG002",
]
"pyprland/adapters/hyprland.py" = [
    "ARG002",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
exclude = [
    "tests/*",
    "scripts/*",
    "sample_extension/*",
]

[build-system]
requires = [
    "uv_build>=0.10.5,<0.11.0",
]
build-backend = "uv_build"

