[tool.poetry]
name = "pypr_examples"
version = "0.0.1"
description = "Hyperland addon counting focus changes"
authors = [
    "fdev31 <fdev31@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyprland = "^1.6.10"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

