[tool.poetry]
name = "pypr_examples"
version = "0.0.1"
description = "Example pyprland plugin counting focus changes"
authors = [
    "fdev31 <fdev31@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyprland = "^2.4.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
